--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -163,13 +163,13 @@ article, section {
     box-shadow: 5px 5px 20px -5px black;
 }
 .card {
-    /* border: 3px solid cyan; */
+     
     display: flex;
     flex-direction: column;
     align-items: end;
     height: 200px;
     width: 400px;
-    margin: 0 0 6rem 0; 
+    margin: 0 0 8rem 0; 
     transition: all .5s ease; 
 }
 #cnt {
@@ -181,6 +181,7 @@ article, section {
 }
 
 .card header{
+    
     flex-direction: column;
     align-items: flex-start;
     background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #EFE6CC);
@@ -188,6 +189,10 @@ article, section {
     height: 100px;
     clip-path: polygon(28% 0, 31% 50%, 28% 100%, 0% 100%, 0 53%, 0% 0%);
     transition: all 1s ease;
+}
+
+.card header {
+    border: 3px solid cyan;
 }
 
 .card:hover {
