--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -32,18 +32,17 @@ a:visited {
     color: var(--text);
 }
 
-/* a:hover {
+ ul > li:hover {
     filter:blur(4px);
     box-shadow: 0 10px 50px 5px #47469B; 
     background: #47469B;
     text-decoration: none;
     color: #FCF8DD; 
     transition: all 2s ease-out;
-} */
+} 
 
 .cardflag,
 h4 {
-
     margin-left: 10px;
     color: #0d1007;
     font-size: 25px;
@@ -184,15 +183,15 @@ article, section {
     
     flex-direction: column;
     align-items: flex-start;
-    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #EFE6CC);
+    background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),            linear-gradient(127deg, rgba(141, 85, 245, 0.8), rgba(0,255,0,0) 70.71%),            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
     width: 400px;
     height: 100px;
     clip-path: polygon(28% 0, 31% 50%, 28% 100%, 0% 100%, 0 53%, 0% 0%);
     transition: all 1s ease;
 }
-
+(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%)
 .card header {
-    border: 3px solid cyan;
+    border: 1px solid cyan;
 }
 
 .card:hover {
