--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -233,4 +233,8 @@ article, section {
     h3 {
         margin-top: 1rem;
     }
+    .right {
+        display: flex;
+        flex-direction: column;
+    }
 }
