--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -162,7 +162,7 @@ article, section {
     box-shadow: 5px 5px 20px -5px black;
 }
 .card {
-     
+    transition: all 1s ease;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -189,7 +189,7 @@ article, section {
     clip-path: polygon(28% 0, 31% 50%, 28% 100%, 0% 100%, 0 53%, 0% 0%);
     transition: all 1s ease;
 }
-(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%)
+
 .card header {
     border: 1px solid cyan;
 }
