--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -162,7 +162,6 @@ article, section {
     box-shadow: 5px 5px 20px -5px black;
 }
 .card {
-    transition: all 1s ease;
     display: flex;
     flex-direction: column;
     align-items: end;
@@ -180,7 +179,6 @@ article, section {
 }
 
 .card header{
-    
     flex-direction: column;
     align-items: flex-start;
     background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),            linear-gradient(127deg, rgba(141, 85, 245, 0.8), rgba(0,255,0,0) 70.71%),            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
@@ -194,7 +192,7 @@ article, section {
     border: 1px solid cyan;
 }
 
-.card:hover {
+.card a:hover {
     transform: scale(101%);
     box-shadow: 0px 0px 30px -5px #7775f4;
     
