--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -180,10 +180,11 @@ article, section {
 
 .card header{
     flex-direction: column;
+    justify-content: center;
     align-items: flex-start;
     background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),            linear-gradient(127deg, rgba(141, 85, 245, 0.8), rgba(0,255,0,0) 70.71%),            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
     width: 400px;
-    height: 100px;
+    max-height: 20px;
     clip-path: polygon(28% 0, 31% 50%, 28% 100%, 0% 100%, 0 53%, 0% 0%);
     transition: all 1s ease;
 }
