--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -7,7 +7,7 @@
 #FCF8DD  ----Yellow*/
 
 :root {
-    --primary: #3F4F70 ;
+    --primary: #2b364f;
     --text: #ACADA5;
     --accent1: #3F4F70;
     --accent2: #47469B;
@@ -53,11 +53,14 @@ h4 {
     font-size: 20px;
 }
 
+
+
 h4 {
     margin-top: 5px;
 }
 
 body{
+    background-color: var(--primary);
     font: san-serif;
 }
 
@@ -68,7 +71,7 @@ main {
 
 Header {
     display: flex;
-    background: var(--accent1);
+    background: var(--primary);
     min-height: 10vh;
     
 }
@@ -82,7 +85,7 @@ header, ul{
 figure {
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid var(--accent1);
+   
 }
 
 li {
@@ -104,7 +107,8 @@ H1 {
     font-weight: 500;
     font-style: normal;
     font-size: 3rem;
-    margin: 2rem;    
+    margin: 2rem;  
+    
 }
 
 H1,
@@ -114,11 +118,10 @@ p {
 }
 
 
-article, section {
-    border-bottom: 1px solid var(--accent1);
-}
+
 
 .flex-container {
+    margin-top: 2rem;
     display:flex;
     flex-direction: row;
 }
@@ -153,9 +156,9 @@ article, section {
 }
 
 #port{
-    height: 130px;
+    height: 100px;
     border-radius: 50%;
-    margin: 7%;
+    margin: 10%;
     margin-left: 5%;
     border: 2px solid #EFE6CC;
     box-shadow: 5px 5px 20px -5px black;
@@ -212,8 +215,9 @@ div header:hover {
         ;}
     
     figure {
+
         justify-content: center;
-        height: 100px;
+        height: 80px;
     }
     p {
         text-align: center;
@@ -223,13 +227,15 @@ div header:hover {
         flex-direction: column;
     }
     li {
-        margin-top: 4rem;
+        margin-top: 1rem;
     }
     H1 {
-        margin-bottom: .5rem;
+        margin-top: 3rem;
+        
     }
     h3 {
         margin-top: 1rem;
+        
     }
     #cnt ul {
         display: flex;
