--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -22,7 +22,7 @@ a:link {
 a:active {
     background: transparent;
     text-decoration: none;
-    color: #47469B;
+    color: var(--accent2);
 }
 
 a:visited {
@@ -43,6 +43,8 @@ div header:hover {
     clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 0 53%, 0% 0%);
 }
     
+/* Element Selectors */
+
 
 body{
     background-color: var(--primary);
@@ -101,6 +103,8 @@ h3,
 p {
     color: var(--text);
 }
+
+/* Class Selectors */
 
  .cardflag,
 h4 {
@@ -173,15 +177,6 @@ h4 {
     min-height: 600px;
 }
 
-
-#port{
-    height: 100px;
-    border-radius: 50%;
-    margin: 10%;
-    margin-left: 5%;
-    border: 2px solid #EFE6CC;
-    box-shadow: 5px 5px 20px -5px black;
-}
 .card {
     display: flex;
     flex-direction: column;
@@ -192,13 +187,6 @@ h4 {
     transition: all .5s ease; 
 }
 
-#cnt {
-    font-family: "brother-1816-printed", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    justify-content: center;
-    font-size: 20px;
-}
 
 .card header{
     display: flex;
@@ -214,6 +202,29 @@ h4 {
     border-radius: 10px 0 0 0;
 }
 
+
+
+/* Id Selectors */
+
+#port{
+    height: 100px;
+    border-radius: 50%;
+    margin: 10%;
+    margin-left: 5%;
+    border: 2px solid #EFE6CC;
+    box-shadow: 5px 5px 20px -5px black;
+}
+
+#cnt {
+    font-family: "brother-1816-printed", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    justify-content: center;
+    font-size: 20px;
+}
+
+
+/* Media Queries */
 
 @media screen and (max-width:768px){
     header {
