--- a/assets/CSS/style.CSS
+++ b/assets/CSS/style.CSS
@@ -232,17 +232,15 @@ h4 {
         flex-direction: column;
         justify-content: center;
     }
+
+.right {
+    border: none;
+}
+
     .flex-container{
         align-items: center;
         flex-direction: column;
        }
-
-    .right {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-self: center;
-    }
 
     figure {
         justify-content: center;
@@ -270,3 +268,4 @@ h4 {
     }
    
 }
+
